--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,10 @@
 nav a{
     margin-right: 20px;
 } 
+nav a.active{
+
+    color: brown;
+    background-color: rgb(39, 38, 38);
+    border-radius: 20px;
+    padding:7px 20px;
+}
